Revert "Integrate Next.js for improved performance and modern web features"
This reverts commit e16b1a1253d83468c19a52cdb439936116e332a7.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,11 +21,11 @@
     ],
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./*"],
-      "@/components/*": ["./components/*"],
-      "@/hooks/*": ["./hooks/*"],
-      "@/lib/*": ["./lib/*"],
-      "@/pages/*": ["./pages/*"],
+      "@/*": ["./client/src/*"],
+      "@/components/*": ["./client/src/components/*"],
+      "@/hooks/*": ["./client/src/hooks/*"],
+      "@/lib/*": ["./client/src/lib/*"],
+      "@/pages/*": ["./client/src/pages/*"],
       "@shared/*": ["./shared/*"]
     }
   },
